--- a/app/views/layouts/_mobile_footer.html.erb
+++ b/app/views/layouts/_mobile_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small blue">
+<footer class="page-footer small blue">
     <div class="container text-center text-md-right">
     <div class="row">
       <% if logged_in? %>
