--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -30,7 +30,7 @@
   <%= f.input :bp, as: :string, label:'Blood Pr. (H/L)', hint:'Optional' %>
   </div>
 
-  <div class="col-sm-2">
+  <div class="col-sm-2" style='display: none'>
   <%= f.input :weight, label: 'Weight (Kg)', hint:'Optional' %>
   </div>
 </div>
