--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -852,7 +852,7 @@ card > hr {
 // Bootstrap form controls focus border
 .form-control:focus {
   border-color: #FF0000;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+//  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
 }
 
 .voice-input:focus {
