--- a/app/views/layouts/_desktop_admin_navigation.html.erb
+++ b/app/views/layouts/_desktop_admin_navigation.html.erb
@@ -1,3 +1,9 @@
+<nav class="navbar navbar-expand-lg navbar-light">
+    <ul class="nav navbar-nav navbar-left">
+      <%= render "layouts/#{device_type}_logo" %>
+    </ul>
+
+  <ul class="nav navbar-nav navbar-right">
   <%= render 'layouts/select_doctor' if (device_type == 'desktop' && controller_name == 'daysheet')%>
   <% if controller_name == 'daysheet' || controller_name == 'billings' %>
     <%= render 'layouts/date_select' %>
@@ -11,3 +17,6 @@
   <%= render 'layouts/ref' %>
   <%= render 'layouts/forms' %>
   <%= render 'layouts/admin' %>
+  <li class="unstyled" style="width:15px"></li>
+  </ul>
+</nav>
