--- a/app/views/layouts/_mobile_admin_navigation.html.erb
+++ b/app/views/layouts/_mobile_admin_navigation.html.erb
@@ -1,12 +1,17 @@
+<nav class="navbar navbar-expand-lg navbar-light">
+  <ul class="nav navbar-nav navbar-right">
   <%= render 'layouts/select_doctor' if (device_type == 'desktop' && controller_name == 'daysheet')%>
   <% if controller_name == 'daysheet' || controller_name == 'billings' %>
     <%= render 'layouts/date_select' %>
   <% elsif !%w( visits users static_pages password_resets patient_docs).include?(controller_name) %>
     <%= render 'layouts/find' %>
   <% end %>
-  <li class="<%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
-  <li class="<%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
+  <li class="nav-item <%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></li>
+  <li class="nav-item <%= 'active' if controller_name == 'daysheet' %>"><%= link_to "Day Sheet", daysheet_path %></li>
   <%= render 'layouts/billing' %>
   <%= render 'layouts/docs' %>
   <%= render 'layouts/ref' %>
   <%= render 'layouts/forms' %>
+  <%= render 'layouts/admin' %>
+  </ul>
+</nav>
