--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,31 +1,1 @@
-<% provide(:title, 'All users') %>
-<%= render "shared/modal", size: 'sm' %>
-
-<table class="tbl2 table-hover table-striped table-bordered">
-   <thead>
-      <tr>
-          <th> <%= sortable 'email', 'Email' %></th>
-          <th class='text-center'>Role</th>
-	  <th class='text-center'>Confirmed</th>
-          <th class='text-center'><%= sortable 'created_at', 'Created' %></th>
-	  <th class='text-center'><%= sortable 'sign_in_count', 'Sign In Count' %></th>
-          <th class='text-center'><%= sortable 'last_sign_in_at', 'Last Sign in' %></th>
-          <th class='text-center'>Invited By</th>
-          <th class='text-center tbl_sm'>Edit</th>
-          <th class='text-center tbl_sm'>Sw.To</th>
-          <th class='text-center tbl_sm'>Del</th>
-      </tr>
-  </thead>
-  <tbody>
-
-  <%= render @users %>
-
-  </tbody>
-</table>
-
-<% if current_user.admin? %>
-<div class="bottom_buttons ">
-<%= will_paginate @users, class: "btn" %> 
-<%# button_to "Add User", new_user_registration_path, class: "btn btn-primary col-md-2 ", method: 'get'  %>
-</div>
-<% end %>
+<%= render "#{device_type}_index" %>
