--- a/app/views/visits/_admin_form.html.erb
+++ b/app/views/visits/_admin_form.html.erb
@@ -1,7 +1,6 @@
 <%= simple_form_for [@patient, @visit],  :html => {:multipart => true} do |f| %> 
-  <%= render 'shared/error_messages', object: f.object %>
+<%= f.error_notification %>
 <% 
-   doc_id = @visit.doctor.id || (current_doctor.id if current_doctor) 
    @procedures = get_active_procedures 
    @insured = [HCP_PATIENT,RMB_PATIENT,WCB_PATIENT].include?(@patient.pat_type) 
 
@@ -26,17 +25,15 @@
   end 
 %>
 
-<div class="well">
+<div class="cyan-well">
   <!-- Row 0 if new visit or admin --> 
 
      <div class="row">
-     <% if action_name == 'new' || current_user.admin? %>
-	<div class="col-md-4">
+	<div class="col-md-6">
 	   <%= f.input :entry_ts, as: :datetime,  datetime_separator: ' at ', label: 'Visit Date/time', html5: true %>
   	</div>
-     <% end %>
-     <% if current_user.admin? && action_name == 'edit' %>
-   	<div class="col-md-4">
+     <% if action_name == 'edit' %>
+   	<div class="col-md-6">
 	  <%= f.input :billing_ref %>
   	</div>
     <% end %>
@@ -46,7 +43,7 @@
 
 <div class="row">
   <div class="col-sm-4">
-  <%= f.input :doc_id, collection: get_active_doctors, label_method: :lname, value_method: :id, prompt: 'Select', selected: doc_id, label:'Doctor', hint: 'Required' %>
+  <%= f.input :doc_id, collection: get_active_doctors, label_method: :lname, value_method: :id, prompt: 'Select', selected: current_doctor.id, label:'Doctor', hint: 'Required' %>
   </div>
 
   <div class="col-sm-2">
@@ -73,7 +70,7 @@
   <!-- Row 2 -->
 
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-sm-4" id='diagnosis'>
   <%=  f.input :diag_code, collection: get_active_diagnoses, label_method: :descr_with_code, value_method: :code, prompt: 'Select', include_blank: 'None', label: :Diagnosis %> 
   </div>
 
@@ -105,7 +102,7 @@
 
 <div class="row">
   <div class="col-sm-2" id="visit_statuses">
-  <%= f.input :status, collection: VISIT_STATUSES, include_blank: false,  placeholder: 'Status', disabled: disabled, selected: READY %>
+  <%= f.input :status, collection: VISIT_STATUSES, include_blank: false,  placeholder: 'Status', disabled: disabled %>
   </div>
 
   <div class="col-sm-2">
@@ -182,6 +179,13 @@ $(document).ready(function() {
     proccode.change(function () {
       (proccode.val() =='') ? $('#visit_statuses').hide() : $('#visit_statuses').show();
     });
+
+    var stat = document.getElementById("visit_status"); 
+    var diagcode = $('#diagnosis select[name="visit[diag_code]"]');
+    diagcode.change(function () {
+      stat.value = <%= READY %>;
+    });
+
 
 });
 
