--- a/app/views/visits/_edit.html.erb
+++ b/app/views/visits/_edit.html.erb
@@ -5,13 +5,12 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
+        <i class="glyphicon glyphicon-user"></i>&nbsp;
         <b class="modal-title" id="myModalLabel"><%= @patient.full_name %>(<%= @patient.pat_type %>) : Visit of <%= @visit.entry_ts %></b>
 </div>
 <div class="modal-body">
   <%= render "#{current_user.role}_form" %>
 </div>
 
-<div class="modal-footer">
-</div>
 
 
