--- a/app/views/visits/_patient_show.html.erb
+++ b/app/views/visits/_patient_show.html.erb
@@ -4,7 +4,7 @@
 <div class="col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-1">
 
 <section>
-<pre class="pre-scrollable-large">
+<pre class="pre-scrollable-lg">
 <% if (HCP_PATIENT..WCB_PATIENT).include?(@visit.pat_type) %>
 <b>Health Card # </b>: <%= @visit.hin_num %> 
 <% elsif @visit.pat_type == IFH_PATIENT %>   
