--- a/app/views/patients/_new.html.erb
+++ b/app/views/patients/_new.html.erb
@@ -7,7 +7,7 @@
 	<b class="modal-title" id="myModalLabel">New Patient Record</b>
 </div>
 <div class="modal-body">
- <div class="well">
+ <div class="cyan-well">
    <% if current_user.patient? %>
     <%= render 'patient_form' %>
   <% else %>
