--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -3,7 +3,7 @@
 
 <h3 class='display-1'>Edit Your Patient Profile</h3>
 
-<div class="well">
+<div class="cyan-well">
   <% if current_user.patient? %>
     <%= render 'patient_form' %>
   <% else %>
