--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -3,7 +3,7 @@
 
 <div class="col-sm-10 col-sm-offset-1">
 <h3 class='display-1'> New Patient's Record </h3>
- <div class="well">
+ <div class="cyan-well">
    <% if current_user.patient? %>
      <%= render 'patient_form' %>
    <% else %>
