--- a/app/views/layouts/_mobile_footer.html.erb
+++ b/app/views/layouts/_mobile_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="page-footer small blue">
+<footer class="page-footer small">
     <div class="container text-center text-md-right">
     <div class="row">
       <% if logged_in? %>
@@ -25,7 +25,7 @@
       <div class="col-md-3 mx-auto">
         <ul class="list-unstyled">
           <li>
-            <%= link_to "Privacy Policy", privacy_path %>
+            <%= link_to "Privacy", privacy_path %>
           </li>
         </ul>
       </div>
