--- a/app/views/patients/_admin_form.html.erb
+++ b/app/views/patients/_admin_form.html.erb
@@ -159,12 +159,11 @@
 <% end %>
 
 <div class="row">
-  <div class="col-md-5 col-md-offset-4">
+  <div class="col-md-12">
   <%= f.button :submit, 'Save Record', class: "btn btn-primary" %>
   </div>
 </div>
 
-<div class="spacer-20"></div>
 <% end %>
 
 <script defer>
