--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -4,7 +4,7 @@
 <div class="spacer-10"></div>
 <div style="float:left">
 <div id='logo' style="padding:10px">
-<img src='/images/clinic.jpg' width="350" style="padding:20px"></img>
+<img src='/images/mobile_clinic.jpg' width="320" style="padding:20px"></img>
 </div>
 </div>
 
