--- a/app/views/layouts/_desktop_doctor_navigation.html.erb
+++ b/app/views/layouts/_desktop_doctor_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light justify-content-between">
   <ul class="nav navbar-nav navbar-left">
      <%= render "layouts/#{device_type}_logo" %>
   </ul>
