--- a/app/views/layouts/_mobile_doctor_navigation.html.erb
+++ b/app/views/layouts/_mobile_doctor_navigation.html.erb
@@ -1,7 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light">
-    <ul class="nav navbar-nav navbar-right">
-<font size=3>
-<b>
+<nav class="navbar navbar-mobile navbar-expand-lg bg-info">
+    <ul class="nav">
 <div class="row">
   <div class="col-xs-3 col-xs-offset-1">
      <div class="nav-item <%= 'active' if controller_name == 'patients' %>"><%= link_to "Patients", patients_path %></div>
@@ -13,8 +11,6 @@
   <span class="nav-item <%= 'active' if controller_name == 'billings' %>"><%= link_to "Billing", billings_path %></span>
   </div>
 </div>
-</b>
-</font>
 
 <p> &nbsp; </p>
 
