--- a/app/views/patients/_edit.html.erb
+++ b/app/views/patients/_edit.html.erb
@@ -4,10 +4,11 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
+        <i class="glyphicon glyphicon-user"></i>&nbsp;
 	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %> - Edit Patient Record</b>
 </div>
 <div class="modal-body">
- <div class="cyan_well">
+ <div class="cyan-well">
    <% if current_user.patient? %>
     <%= render 'patient_form' %>
   <% else %>
