--- a/app/views/patients/_new.html.erb
+++ b/app/views/patients/_new.html.erb
@@ -4,6 +4,7 @@
  
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal">&times;</button>
+        <i class="glyphicon glyphicon-user"></i>&nbsp;
 	<b class="modal-title" id="myModalLabel">New Patient Record</b>
 </div>
 <div class="modal-body">
