--- a/app/views/users/_desktop_index.html.erb
+++ b/app/views/users/_desktop_index.html.erb
@@ -6,11 +6,11 @@
       <tr>
           <th> <%= sortable 'email', 'Email' %></th>
           <th class='text-center'>Role</th>
+          <th  class='text-center'>Patient</th>
 	  <th class='text-center'>Confirmed</th>
           <th class='text-center'><%= sortable 'created_at', 'Created' %></th>
 	  <th class='text-center'><%= sortable 'sign_in_count', 'Sign In Count' %></th>
           <th class='text-center'><%= sortable 'last_sign_in_at', 'Last Sign in' %></th>
-          <th class='text-center'>Invited By</th>
           <th class='text-center tbl_sm'>Edit</th>
           <th class='text-center tbl_sm'>Sw.To</th>
           <th class='text-center tbl_sm'>Del</th>
