--- a/app/views/users/_desktop_user.html.erb
+++ b/app/views/users/_desktop_user.html.erb
@@ -1,11 +1,11 @@
  <tr>
   <td><%= user.email %></td>
   <td class='text-center'><%= user.role %></td>
+  <td class='text-center'><%= user.patient.lname if user.patient? %></td>
   <td class='text-center'><%= user.confirmed? %></td>
   <td class='text-center'><%= user.created_at.to_date %></td>
   <td class='text-center'><%= user.sign_in_count %></td>
   <td class='text-center'><%= user.last_sign_in_at %></td>
-  <td class='text-center'><%= user.invited_by %></td>
 
    <% if current_user?(user) %>
        <td colspan=3></td>
