bug fix in mexmo sms; facebook messanger enabled in landing page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-  <%# render 'layouts/facebook_messenger' %>
+  <%= render 'layouts/facebook_messenger' %>
   <div class="container">
     <%= render 'layouts/navigation' %>
    <div id="body">
