front page revised

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -203,8 +203,10 @@ td.hlight {
 }
 
 .hdr-text {
+//  font-family: "Gill Sans", sans-serif;
+  font-family: system-ui;
   margin-right: 10px;
-  font-size: 1.95em;
+  font-size: 2.4em;
   color: grey;
   text-transform: uppercase;
   letter-spacing: -2px;
