--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,10 +1,14 @@
 <% if logged_in? %>
-   <%= render "shared/modal" %>
    <%= render "layouts/#{device_type}_#{current_user.role}_navigation" %>
 <% else %>
 <nav class="navbar navbar-expand-lg navbar-light">
+  <ul class="nav navbar-nav navbar-left">
+    <li class="nav-item"> <%= link_to "Stoney Creek Medical Walk-In Clinic", root_path, id: "logo" %></li>
+  </ul>
+  <% if device_is_desktop? %>
   <ul class="nav navbar-nav navbar-right">
-   <li class="login_link"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path %></li>
+    <li class="login_link"><%= link_to "<i class='glyphicon glyphicon-log-in'></i> Login".html_safe, new_user_session_path %></li>
+  <% end %>
   </ul>
 </nav>
 <% end %>
