--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div id="note" style="display: none">
-    To access to your patient record, please enter:
+    To access your patient record, please enter:
   </div>
   <div class="row">
     <div class="col-md-12" id="email" >
