--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -13,12 +13,14 @@
 
 <div style="padding:20px;">
 <font size=3>
-  <p> Don't want to stay in a busy waiting room during pandemic? You don't have to. You can now discuss your medical issue and renew your medication over the phone.</p>
+ <p> Need to see a doctor, but don't want to go to clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
   <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment right away. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
     
 <font size=4><div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div></font>
 <div class='spacer-20'></div>
 
+
+<%= Time.now.between?('9:00'.to_time,'20:00'.to_time) %>
 <font size=4>
 <div align="center"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 </font>
@@ -29,7 +31,7 @@
 
 <p>
 Covid-19 is here and it’s not a regular flu. This virus is much more contagious and much more deadly, especially for older people with health conditions.  There’s no cure and no vaccine at this point. So please treat the situation seriously and take all measures to keep yourself safe.
-If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not go to see a doctor, this is a sure way to spread the infection!  Please stay at home and call a doctor. You can register and make a telemedicine appointment with dr. Ostapenko using the buttons above.
+If you have any or all of these symptoms: fever, coughing, weakness, sweating, muscle pain, do not go to see a doctor, this is a sure way to spread the infection!  Please stay at home and call a doctor. You can register and make a telemedicine appointment with dr. Ostapenko using the button above.
 </p>
 
 <p>
