--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -9,7 +9,7 @@
 
 <div style="padding:10px;">
 <font size=4>
- <p> Don't want to stay in a busy waiting room during pandemic? You don't have to. You can now discuss your medical issue and renew your medication over the phone.</p>
+ <p> Need to see a doctor, but don't want to go to clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
   <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
 
 <div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
