--- a/app/views/visits/_patient_form.html.erb
+++ b/app/views/visits/_patient_form.html.erb
@@ -4,7 +4,7 @@
 <%= f.hidden_field :vis_type, value: TELE_VISIT %>
 <%= f.hidden_field :bil_type, value: HCP_BILLING %>
 <%= f.hidden_field :status, value: ARRIVED %>
-<%= f.hidden_field :doc_id, value: current_doctor.id %>
+<%= f.hidden_field :doc_id, value: current_doctor.id rescue 1215 %>  <!-- !!!! Dr. Ostapenko -->
 
 <div class="cyan-well">
   <!-- Row 0 if new visit or admin --> 
