home page icons

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -196,8 +196,14 @@ td.hlight {
   }
 }
 
+#homepic  {
+  float: left;
+  margin-right: 10px;
+  padding:20px
+}
+
 #address {
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: bold;
   margin-left: 20px;  
 }
