--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -23,3 +23,7 @@
 <p>Don’t have a health card? We still can help. Please call the number below and leave a message. We will respond as soon as we can. </p>
 
 <h1> (289) 204-0561 </h1>
+
+<div class='spacer-20'></div>
+<div class='spacer-20'></div>
+<%= render "footer_icons" %>
