--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -9,11 +9,11 @@
 
 <div style="padding:10px;">
 <font size=4>
- <p> Need to see a doctor, but don't want to go to clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
+ <p> Need to see a doctor, but don't want to visit clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
   <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
 
 <div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
-<div class='spacer-20'></div>
+<div class='spacer-10'></div>
 
 <font size=4>
 <div align="center"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
