--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -209,7 +209,7 @@ td.hlight {
 .hdr-text {
 //  font-family: "Gill Sans", sans-serif;
   font-family: system-ui;
-  margin-right: 10px;
+  margin-left: 10px;
   line-height: 1.18;
   font-size: 2.5em;
   color: grey;
