--- a/app/views/patients/_patient_form.html.erb
+++ b/app/views/patients/_patient_form.html.erb
@@ -5,6 +5,9 @@
   <%= f.hidden_field :pat_type, value: HCP_PATIENT %>
   <%= f.hidden_field :country, value: 'Canada' %>
   <%= f.hidden_field :email %>
+  <%= f.hidden_field :mname %>
+  <%= f.hidden_field :maid_name %>
+  <%= f.hidden_field :notes %>
 
   <!-- Row 1 -->
   
@@ -18,18 +21,14 @@
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :mname, label: 'Middle Name' %>
-  </div>
-
-  <div class="col-sm-2">
   <%= f.input :sex, collection: SEXES, hint: 'Required', label: 'Gender', include_blank: false %>
   </div>
   
-  <div class="col-sm-2" id="maiden_name">
-  <%= f.input :maid_name, label: 'Maiden Name' %>
+  <div class="col-sm-3">
+  <%= f.input :dob, as: :date, start_year: 1915, end_year: Date.today.year, hint: 'Required', html5: true %>
   </div>
-</div>
-
+</div>  
+  
 <div class="row">
   <div class="col-sm-3" id="ifh_number", style="display:none;">
   <%= f.input :ifh_number, label:'IFH Number', hint: 'Required *' %>
@@ -51,9 +50,6 @@
      <%= f.input :hin_expiry, start_year: Date.today.year, end_year: Date.today.year+5, html5: true, label: "Expires On", hint: 'Required' %>
   </div>
   
-  <div class="col-sm-3">
-  <%= f.input :dob, as: :date, start_year: 1915, end_year: Date.today.year, hint: 'Required', html5: true %>
-  </div>
   
 </div>
   
@@ -61,7 +57,7 @@
 <div class="row">
 
   <div class="col-sm-6">
-  <%= f.input :addr, label: 'Srteet Address' %>
+  <%= f.input :addr, label: 'Street Address' %>
   </div>
   
   <div class="col-sm-3">
@@ -117,18 +113,9 @@
 <!-- Row 7 -->
 <div class="row">
   <div class="col-sm-12">
-  <%= f.input :meds, as: :text, rows:2, label: 'List of current medications', hint: 'Optional'  %>
+  <%= f.input :meds, label: 'List of current medications', hint: 'Optional'  %>
   </div>
 </div>
-
-<!-- Row 8 -->
-<% unless current_user.patient? %>
-<div class="row">
-  <div class="col-sm-12">
-  <%= f.input :notes, rows:4, placeholder: 'Notes', label: false %>
-  </div>
-</div>
-<% end %>
 
 <div class="row">
   <div class="col-md-12 col-xs-12">
@@ -139,16 +126,16 @@
 <% end %>
 
 <script defer>
-$('body').tooltip({ selector: "[data-toggle~='tooltip']"});
-$(document).ready(function () {
+//$('body').tooltip({ selector: "[data-toggle~='tooltip']"});
+//$(document).ready(function () {
 // Show maiden name text field for female patients 
-   var sex = $('select[name="patient[sex]"]');
+//   var sex = $('select[name="patient[sex]"]');
 	
-   (sex.val() =='F') ? $('#maiden_name').show() : $('#maiden_name').hide();
-   sex.change(function () {
-     (sex.val() =='F') ? $('#maiden_name').show() : $('#maiden_name').hide();
-   });
+//   (sex.val() =='F') ? $('#maiden_name').show() : $('#maiden_name').hide();
+//   sex.change(function () {
+//     (sex.val() =='F') ? $('#maiden_name').show() : $('#maiden_name').hide();
+//   });
 
-});
+//});
 </script>
 
