--- a/app/views/patients/_admin_form.html.erb
+++ b/app/views/patients/_admin_form.html.erb
@@ -96,7 +96,7 @@
 <div class="row">
   <div class="col-sm-3">
   <%# f.input :family_dr, label: 'Family Doctor' #%>
-  <%= f.input :family_dr, collection: Doctor.all, label_method: :lname, value_method: :lname, prompt: 'Select' %>
+  <%= f.input :family_dr, collection: Doctor.all, label_method: :lname, value_method: :lname, prompt: 'Select', hint: 'Optional' %>
   </div>
   
   <div class="col-sm-3">
