--- a/app/views/patients/_buttons.html.erb
+++ b/app/views/patients/_buttons.html.erb
@@ -23,5 +23,5 @@
 </div>
 
 <div class="col-sm-3 col-md-4" style="padding-left:25px;">
-<%= button_to "Upload Document", new_patient_patient_doc_path(@patient),  class: "btn btn-info active btn-sm", method: 'get' %>
+<%= button_to "Upload Document", new_patient_patient_doc_path(@patient),  class: "btn btn-success btn-sm", method: 'get' %>
 </div>
