--- a/app/views/static_pages/_desktop_home.html.erb
+++ b/app/views/static_pages/_desktop_home.html.erb
@@ -9,7 +9,6 @@
 </aside>
 
 <div class="hdr-text">Digital Walk-In Clinic for canadians <img src="/images/leaf.png" width=45 valign=top> </div> 
-
 <div class='spacer-20'></div>
 
 <div style="padding:20px;">
@@ -17,12 +16,10 @@
  <p> Need to see a doctor, but don't want to go to clinic during pandemic? You don't have to. You can now discuss your medical issue and renew your medications over the phone.</p>
   <p> Simply register with your OHIP card, confirm your email and login to make your first telephone appointment right away. Once registered, you will have access to your patient record and visit history. Our clinic served over 65000 patients over the last 15 years. </p>
     
-<font size=4><div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div></font>
-<div class='spacer-20'></div>
+<div align="center"> <%# link_to 'Yes! I want to talk to a doctor', new_user_registration_path, class: "btn btn-primary btn-lg" %> </div>
 
-<font size=4>
+<div class='spacer-20'></div>
 <div align="center"><%= link_to 'Request Callback From Dr. Ostapenko', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
-</font>
 
 <div class='spacer-20'></div>
 <div class='spacer-20'></div>
@@ -41,6 +38,7 @@ If you have any or all of these symptoms: fever, coughing, weakness, sweating, m
 <p>
 <b>Think you might have it?</b> <a href="https://covid-19.ontario.ca/self-assessment/#q1" target="_new">Here is official Ontario quick self-assessment page</a>
 
+</font>
 
 
 <div class='spacer-20'></div>
