--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -859,7 +859,7 @@ card > hr {
 .btn:hover,
 .btn:focus {
   color: #9555af;
-  border-color: currentColor;
+//  border-color: currentColor;
   background-color: white;
 }
 
