CPSO record link added to home page

--- a/app/views/static_pages/_footer_icons.html.erb
+++ b/app/views/static_pages/_footer_icons.html.erb
@@ -1,5 +1,12 @@
 <div class="row" style="bottom: -20px; position: relative">
 <div class="col-md-1 col-xs-3 col-md-offset-5 col-xs-offset-2">
+<div style="width: 100px">
+  <a href="https://doctors.cpso.on.ca/DoctorDetails/E-Ostapenko/0169356-74913" target="_new">
+  <img src="/images/lena.png" width=65><br> My CPSO record</a>
+</div>
+</div>
+
+<div class="col-md-1 col-xs-3">
 <div style="width: 45px">
   <i class="glyphicon glyphicon-time" style="font-size:30px;"></i><small>Fast Callbacks</small>
 </div>
