--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -47,7 +47,7 @@
 
   <div class="row" id="submit">
   <div class="col-md-12">
-    <%= f.button :submit, "Sign Up to make an appointment", class: "btn btn-primary" %>
+    <%= f.button :submit, "Sign Up to make an appointment", class: "btn btn-primary btn-lg" %>
   </div>
   </div>
 
