renewmymeds domain added; customized front page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -113,7 +113,7 @@ table {
     padding-top: 22px;
     padding-bottom: 10px;
 //    line-height: 20px;
-  }
+}
 
 .spacer-10 {
   height: 10px;
@@ -181,7 +181,7 @@ td.hlight {
 /* header */
 
 #logo {
-  float: left;
+//  float: left;
   margin-right: 10px;
   font-size: 20px;
   color: #34d5eb;
