--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-
+<%  if request.host.match(/renewmymeds/i) %>
+<%= render "#{device_type}_rmm_home" %>
+<% else %>
 <%= render "#{device_type}_home" %>
+<% end %>
