renewyourmed mobile home page tune up

--- a/app/views/static_pages/_mobile_rmm_home.html.erb
+++ b/app/views/static_pages/_mobile_rmm_home.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, 'Welcome') %>
 
+<div style="padding-left: 20px;" id="logo">Stoney Creek Medical Walk-In Clinic</div>
+
 <div class="spacer-10"></div>
 <div class="row">
   <div class="col-md-4">
@@ -22,10 +24,8 @@
  <p> Simply register with your OHIP card, confirm your email and login. Request callback from doctor, discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
 
 <div class='spacer-20'></div>
-<div class='spacer-20'></div>
 <div align="center"><%= link_to 'Yes! I want to renew my prescription now', new_user_session_path, class: "btn btn-warning btn-lg" %></div>
 
-<div class='spacer-20'></div>
 <div class='spacer-20'></div>
 
 <p>Don’t have a health card? We still can help. Please call the number above and leave a message. We will respond as soon as we can. </p>
