--- a/app/views/static_pages/_mobile_rmm_home.html.erb
+++ b/app/views/static_pages/_mobile_rmm_home.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Welcome') %>
 
-<div style="padding-left: 20px;" id="logo">Stoney Creek Medical Walk-In Clinic</div>
+<div id="logo">Stoney Creek Medical Walk-In Clinic</div>
 
 <div class="spacer-10"></div>
 <div class="row">
@@ -12,13 +12,13 @@
 
 <div class="col-md-8">
 <div class="hdr-text"> 
-  <img src="/images/pills.png" width=50></img>
   Medication Renewals Over The Phone
+  <img src="/images/pills.png" width=50></img>
 </div> 
 <div class='spacer-20'></div>
 <div class='spacer-20'></div>
 
-<div style="padding:20px;">
+<div>
 <font size=3>
  <p> Did you know? You can now renew your medications over the phone. </p>
  <p> Simply register with your OHIP card, confirm your email and login. Request callback from doctor, discuss your needs and then just go to pharmacy near you to pick up your prescription. Simple as that! </p>
